--- a/Tests/Tests_Maud.ipynb
+++ b/Tests/Tests_Maud.ipynb
@@ -1,8 +1,23 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Kernel to use here : *base (Python3.9.13)*\n",
+    "\n",
+    "**TO DO :**\n",
+    "- Reprendre les analyses d'Alice. Comment sont générés les QT de la figure \n",
+    "- 2ème analyse test : pour 1 objet visité, plotter la trajectoire de chaque QT fait autour de cet objet. Le début de la trajectoire doit se trouver au centre du graphique. Tous les QT doivent donc début au même centre. A faire d'abord pour les 10 premiers objets visités.\n",
+    "- 3ème analyse test : plotter la distribution des vitesses des QT en fonction du temps et ce pour chaque objet visité. \n",
+    "- Une fois qu'on obtient les analyses voulues, passer ce qui est possible en fonction (facilitera l'incorporation dans le fichier MouseTache + accélère le processus d'analyse)\n",
+    "- Régler les échelles de chaque graphique\n",
+    "- Créer une seule figure avec toutes les analyses pour chaque objet. A redimensionner correctement à la fin. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,12 +50,13 @@
    "source": [
     "## Tests : plot the trajectories of QT from Alice's analysis\n",
     "\n",
-    "#### First : plot the trajectory around the first visited object, 1 second before the animal enters in it and 1 second after it left"
+    "#### First : plot the trajectory around the first visited object, 1 second before the animal enters in it and 1 second after it left\n",
+    "#### Done for the 10 first visited objects"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -59,11 +75,11 @@
      "output_type": "stream",
      "text": [
       "        time  framenumber  xposition  yposition currentPatch previousTrapeze  \\\n",
-      "7     15.915          360         79        230           NW               W   \n",
-      "8     16.953          386        202        336           SW               N   \n",
-      "9     17.833          408        191        425           SW               E   \n",
-      "10    18.794          432        100        399           SW               S   \n",
-      "11    19.596          452         97        336           SW               W   \n",
+      "0      1.904           10        439        235           NE               S   \n",
+      "1      5.030           88        332        201           NE               W   \n",
+      "2      5.189           92        326        200           NE               S   \n",
+      "3      6.590          127        300        244           NE               W   \n",
+      "4     12.672          279        318        187           NE               S   \n",
       "..       ...          ...        ...        ...          ...             ...   \n",
       "674  711.526        17741        404        327           SE               E   \n",
       "675  712.808        17773        412        203           NE               S   \n",
@@ -72,11 +88,11 @@
       "678  715.527        17841        302        242           NE               W   \n",
       "\n",
       "    currentTrapeze  turnDirection ongoingRewardedObject  \\\n",
-      "7                S           90.0                ['NW']   \n",
-      "8                E          270.0                ['SW']   \n",
-      "9                S          270.0                ['SW']   \n",
-      "10               W          270.0                ['SW']   \n",
-      "11               N          270.0                ['SW']   \n",
+      "0                E           90.0                ['NE']   \n",
+      "1                S           90.0                ['NE']   \n",
+      "2                W          270.0                ['NE']   \n",
+      "3                S           90.0                ['NE']   \n",
+      "4                W          270.0                   NaN   \n",
       "..             ...            ...                   ...   \n",
       "674              N           90.0                ['SE']   \n",
       "675              E           90.0                ['NE']   \n",
@@ -85,11 +101,11 @@
       "678              S           90.0                ['NE']   \n",
       "\n",
       "    ongoingRewardedDirection Rewarded typeOfTurn  nberOfConsecRewards  \\\n",
-      "7                    [270.0]    False       gobd                    5   \n",
-      "8                    [270.0]        1       gogd                    6   \n",
-      "9                    [270.0]        1       gogd                    7   \n",
-      "10                   [270.0]        1       gogd                    8   \n",
-      "11                   [270.0]        0     gogdnr                    0   \n",
+      "0                     [90.0]        1       gogd                    1   \n",
+      "1                     [90.0]        1       gogd                    2   \n",
+      "2                     [90.0]    False       gobd                    2   \n",
+      "3                     [90.0]        1       gogd                    3   \n",
+      "4                    [270.0]    False       bogd                    3   \n",
       "..                       ...      ...        ...                  ...   \n",
       "674                   [90.0]        1       gogd                   20   \n",
       "675                   [90.0]        1       gogd                   21   \n",
@@ -98,11 +114,11 @@
       "678                   [90.0]        0     gogdnr                    0   \n",
       "\n",
       "     maxNberOfConsecRewards  nbQT_sinceLastReward  nbRewardsWhileDepleting  \\\n",
-      "7                         0                     0                        2   \n",
-      "8                         0                     0                        1   \n",
-      "9                         0                     0                        2   \n",
-      "10                        0                     0                        3   \n",
-      "11                        0                     1                        3   \n",
+      "0                         0                     0                        1   \n",
+      "1                         0                     0                        2   \n",
+      "2                         0                     0                        2   \n",
+      "3                         0                     0                        3   \n",
+      "4                         0                     0                        0   \n",
       "..                      ...                   ...                      ...   \n",
       "674                       0                     0                        3   \n",
       "675                       0                     0                        1   \n",
@@ -111,11 +127,11 @@
       "678                       0                     1                        3   \n",
       "\n",
       "     totalnberOfRewards  \n",
-      "7                     5  \n",
-      "8                     6  \n",
-      "9                     7  \n",
-      "10                    8  \n",
-      "11                    8  \n",
+      "0                     1  \n",
+      "1                     2  \n",
+      "2                     2  \n",
+      "3                     3  \n",
+      "4                     3  \n",
       "..                  ...  \n",
       "674                 532  \n",
       "675                 533  \n",
@@ -123,46 +139,54 @@
       "677                 535  \n",
       "678                 535  \n",
       "\n",
-      "[672 rows x 17 columns]\n"
+      "[679 rows x 17 columns]\n"
      ]
     }
    ],
    "source": [
+    "# Tests for turns_df \n",
+    "\n",
     "csv_turns_path = Folder_path + mouseName + '/' + session + '/' + session + '_turnsinfo.csv'\n",
     "turns_df = pd.read_csv(csv_turns_path)\n",
-    "turns_df=turns_df.loc[turns_df[\"time\"]>15]\n",
+    "#turns_df=turns_df.loc[turns_df[\"time\"]>15]\n",
     "print(turns_df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndexError",
-     "evalue": "single positional indexer is out-of-bounds",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_8853/1695609794.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mindex\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrow\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mturns_df\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0miterrows\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m     \u001b[0;31m# Si c'est la première ligne ou si le current_patch a changé\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 18\u001b[0;31m     \u001b[0;32mif\u001b[0m \u001b[0mindex\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m0\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0mrow\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'currentPatch'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0mturns_df\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0miloc\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mindex\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'currentPatch'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     19\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m         \u001b[0;31m# Sauvegarde du currentPatch dans la liste des objets visités\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/lib/python3.9/site-packages/pandas/core/indexing.py\u001b[0m in \u001b[0;36m__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m    965\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    966\u001b[0m             \u001b[0mmaybe_callable\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mapply_if_callable\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mobj\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 967\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_getitem_axis\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmaybe_callable\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0maxis\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    968\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    969\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m_is_scalar_access\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkey\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mtuple\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/lib/python3.9/site-packages/pandas/core/indexing.py\u001b[0m in \u001b[0;36m_getitem_axis\u001b[0;34m(self, key, axis)\u001b[0m\n\u001b[1;32m   1521\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1522\u001b[0m             \u001b[0;31m# validate the location\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1523\u001b[0;31m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_validate_integer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1524\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1525\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mobj\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_ixs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0maxis\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/lib/python3.9/site-packages/pandas/core/indexing.py\u001b[0m in \u001b[0;36m_validate_integer\u001b[0;34m(self, key, axis)\u001b[0m\n\u001b[1;32m   1453\u001b[0m         \u001b[0mlen_axis\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mobj\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_get_axis\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0maxis\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1454\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mkey\u001b[0m \u001b[0;34m>=\u001b[0m \u001b[0mlen_axis\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0mkey\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0mlen_axis\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1455\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mIndexError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"single positional indexer is out-of-bounds\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1456\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1457\u001b[0m     \u001b[0;31m# -------------------------------------------------------------------\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mIndexError\u001b[0m: single positional indexer is out-of-bounds"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    Objet visité  temps d'entrée  temps de sortie  nb rewards\n",
+      "2             SW          16.953           20.319           1\n",
+      "3             SE          21.035           22.517           4\n",
+      "4             NE          24.078           26.559           0\n",
+      "5             NW          27.879           30.362           0\n",
+      "6             NE          31.283           33.445           0\n",
+      "..           ...             ...              ...         ...\n",
+      "174           SW         673.825          675.386          14\n",
+      "175           NW         675.666          675.666          15\n",
+      "176           SW         679.588          688.314          17\n",
+      "177           SE         704.001          711.526          20\n",
+      "178           NE         712.808          715.527           0\n",
+      "\n",
+      "[177 rows x 4 columns]\n"
      ]
     }
    ],
    "source": [
-    "#Création d'un dataframe pour plotter la trajectoire de chaque objet \n",
+    "# Création d'un dataframe pour plotter la trajectoire de chaque objet \n",
     "\n",
-    "#turns_df = dataframe du tableur \"turnsinfos\" généré à la fin des sessions\n",
-    "#df = dataframe qui contient, à chaque fois que la souris visite un objet, quel objet est visité + à quel moment elle a commencé son premier turn + le temps du dernier QT + le nb de QT fait à chaque objet\n",
+    "# turns_df = dataframe du tableur \"turnsinfos\" généré à la fin des sessions\n",
+    "# df = dataframe qui contient, à chaque fois que la souris visite un objet, quel objet est visité + à quel moment elle a commencé son premier turn + le temps du dernier QT\n",
     "\n",
     "csv_turns_path = Folder_path + mouseName + '/' + session + '/' + session + '_turnsinfo.csv'\n",
     "turns_df = pd.read_csv(csv_turns_path)\n",
-    "turns_df=turns_df.loc[turns_df[\"time\"]>15]\n",
+    "#turns_df=turns_df.loc[turns_df[\"time\"]>15]\n",
     "\n",
     "objets_visites = []\n",
     "temps_entree = []\n",
@@ -198,13 +222,13 @@
     "    \"nb rewards\": nb_QT\n",
     "    })\n",
     "\n",
-    "#df=df.loc[df[\"temps d'entrée\"]>15]\n",
+    "df=df.loc[df[\"temps d'entrée\"]>15]\n",
     "print(df)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -268,10 +292,10 @@
    "source": [
     "# Limite de la taille du cadre\n",
     "frame_size = 270\n",
-    "n=min(len(objets_visites), 10) ##change here\n",
+    "n=min(len(objets_visites), 10)\n",
     "\n",
     "# Création de sous-graphiques pour chaque objet visité\n",
-    "fig, axs = plt.subplots(n, figsize=(8, 6 * n)) #change here\n",
+    "fig, axs = plt.subplots(n, figsize=(8, 6 * n))\n",
     "\n",
     "# Itération sur les objets visités\n",
     "for i, objet_visite in enumerate(objets_visites[:n]):\n",
@@ -295,8 +319,8 @@
     "    axs[i].plot(traj_df_objet['xposition'], traj_df_objet['yposition'], linewidth=0.5, c='k')\n",
     "    axs[i].scatter(x_debut, y_debut, color='green', label='Début')  # Point vert au début\n",
     "    axs[i].scatter(x_fin, y_fin, color='red', label='Fin')          # Point rouge à la fin\n",
-    "    #axs[i].set_xlim(x_lim_min, x_lim_max)\n",
-    "    #axs[i].set_ylim(y_lim_min, y_lim_max)\n",
+    "    #axs[i].set_xlim(x_lim_min, x_lim_max) # Etait utilisé pour centrer la trajectoire\n",
+    "    #axs[i].set_ylim(y_lim_min, y_lim_max) # Etait utilisé pour centrer la trajectoire\n",
     "    axs[i].set_xlim(50, 450)\n",
     "    axs[i].set_ylim(50, 450)\n",
     "    axs[i].set_title(f\"Objet visité n°{i+1} : {objet_visite}\")\n",
@@ -312,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -346,7 +370,8 @@
    "metadata": {},
    "source": [
     "#### Second : plot the trajectory of every QT individually around the visited objects\n",
-    "##### Every trajectory must start in the middle of a graph, the graph is centered around each object"
+    "##### Every trajectory must start in the middle of a graph, the graph is centered around each object\n",
+    "##### Also done for the 10 first visited objects"
    ]
   },
   {
