add Alice part for QT

--- a/Tests/Tests_Maud.ipynb
+++ b/Tests/Tests_Maud.ipynb
@@ -380,7 +380,56 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Cellule avec la partie de l'ancien code d'Alice qui m'intéresse (plot des trajectoires des QT spécifiquement)\n",
+    "\n",
+    "# Il me manque à reprendre de l'ancien code : \n",
+    "# - list_quarter_turn (et autres listes mais pas d'intérêt ? A voir selon comment c'est codé ailleurs)\n",
+    "# - collection_trapeze\n",
+    "# - xgauss et ygauss\n",
+    "\n",
+    "nb_column = 5 #one for each type of trajectory\n",
+    "nb_line = 4 #one for each graph to be plotted\n",
+    "\n",
+    "max_height_speed = []\n",
+    "max_height_angular = []\n",
+    "max_height_accel = []\n",
+    "\n",
+    "fig = plt.figure(figsize = (5 * nb_column, 5 * nb_line))\n",
+    "for a in range(nb_column):\n",
+    "    current_movements = [list_quarter_turn, list_between_objects, list_toward_object, list_movement_not_quarter, list_of_stops][a]\n",
+    "\n",
+    "#Plots the trajectory of the current mod\n",
+    "    ax  = fig.add_subplot(nb_line, nb_column, 1 + a)\n",
+    "    for patch in collection_trapeze :#plot the trapeze around the object\n",
+    "        for trapeze in collection_trapeze[patch] :\n",
+    "            shape = Polygon(np.array(collection_trapeze[patch][trapeze]), color = \"lemonchiffon\")\n",
+    "            ax.add_patch(shape)\n",
+    "\n",
+    "        for u in current_movements :#plot each individual trajectory of the current category\n",
+    "            colors = plt.cm.rainbow(np.random.random())\n",
+    "            if len(u) != 0 :\n",
+    "                ax.plot( xgauss[u[0] : u[1]], ygauss[u[0] : u[1]], linewidth = 0.5, c = colors )\n",
+    "            else : pass\n",
+    "        \n",
+    "    \n",
+    "#Plots a colored dot at the begining and end of each epoch\n",
+    "    indices_start = [u[0] for u in current_movements]\n",
+    "    indices_end = [u[1] for u in current_movements]\n",
+    "    if len(indices_start) != 0 or len(indices_end)!= 0 :\n",
+    "        ax.scatter(xgauss[indices_start], ygauss[indices_start], linewidths= 0.1, color = \"green\")\n",
+    "        ax.scatter(xgauss[indices_end], ygauss[indices_end], linewidths= 0.1, color = \"red\")\n",
+    "    else : pass\n",
+    "        \n",
+    "    timeSpentIn = round(sum([df.loc[df.index[epoch[1]], 'time'] - df.loc[df.index[epoch[0]], 'time'] for epoch in current_movements]), 2)\n",
+    "\n",
+    "#Sets the parameters of the graph\n",
+    "    ax.set_ylim(0, 500); ax.set_xlim(0, 500)\n",
+    "    ax.set_title([\"Quarter turns : \", \"Between objects : \", \"Towards objects : \", \"Other movements : \", \"Stops : \"][a] + str(len(current_movements)) + f\"\\n total time : {timeSpentIn}s\")\n",
+    "    plt.xlim(12, 500); plt.ylim(12, 500)\n",
+    "    ax.get_xaxis().set_visible(False)\n",
+    "    ax.get_yaxis().set_visible(False)"
+   ]
   }
  ],
  "metadata": {
