add old analysis of QT

--- a/Tests/Tests_Maud.ipynb
+++ b/Tests/Tests_Maud.ipynb
@@ -381,6 +381,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Cellule avec la partie de l'ancien code d'Alice qui m'intéresse (faire la liste des QT selon ses critères)\n",
+    "\n",
+    "# Il me manque à reprendre de l'ancien code : \n",
+    "# - list_epochs + peut-être epoch ?\n",
+    "\n",
+    "list_quarter_turn = [epoch for epoch in list_epochs if epoch[2][0] == \"Q\"] #Gets the list of all quarter turns\n",
+    "\n",
+    "#Creates a list for each type of quarter turn\n",
+    "rewarded = [epoch for epoch in list_quarter_turn if epoch[2][2] == 'G']\n",
+    "unrewarded = [epoch for epoch in list_quarter_turn if epoch[2][2] != 'G']\n",
+    "extra = [epoch for epoch in list_quarter_turn if epoch[2][2] == 'E']\n",
+    "badDirection = [epoch for epoch in list_quarter_turn if epoch[2][2] == 'B']\n",
+    "wrongObject = [epoch for epoch in list_quarter_turn if epoch[2][2] == 'O']\n",
+    "doubleWrong = [epoch for epoch in list_quarter_turn if epoch[2][2] == 'H']\n",
+    "\n",
+    "anti_clock_turn = [epoch for epoch in list_quarter_turn if epoch[2][1] == \"k\"]\n",
+    "clock_turn = [epoch for epoch in list_quarter_turn if epoch[2][1] == \"w\"]\n",
+    "exploring = [epoch for epoch in list_quarter_turn if epoch[2][2] == 'X']\n",
+    "\n",
+    "when_reward = [[dinfo.loc[a, \"time\"], dinfo.loc[a, \"currentPatch\"]] for a in dinfo.index if dinfo.loc[a, \"Rewarded\"]]\n",
+    "when_no_reward = [[dinfo.loc[a, \"time\"], dinfo.loc[a, \"currentPatch\"]] for a in dinfo.index if not dinfo.loc[a, \"Rewarded\"]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Cellule avec la partie de l'ancien code d'Alice qui m'intéresse (plot des trajectoires des QT spécifiquement)\n",
     "\n",
     "# Il me manque à reprendre de l'ancien code : \n",
@@ -388,8 +417,8 @@
     "# - collection_trapeze\n",
     "# - xgauss et ygauss\n",
     "\n",
-    "nb_column = 5 #one for each type of trajectory\n",
-    "nb_line = 4 #one for each graph to be plotted\n",
+    "nb_column = 1 #one for each type of trajectory # Changé \n",
+    "nb_line = 1 #one for each graph to be plotted # Changé\n",
     "\n",
     "max_height_speed = []\n",
     "max_height_angular = []\n",
@@ -397,7 +426,7 @@
     "\n",
     "fig = plt.figure(figsize = (5 * nb_column, 5 * nb_line))\n",
     "for a in range(nb_column):\n",
-    "    current_movements = [list_quarter_turn, list_between_objects, list_toward_object, list_movement_not_quarter, list_of_stops][a]\n",
+    "    current_movements = [list_quarter_turn][a] # Changé\n",
     "\n",
     "#Plots the trajectory of the current mod\n",
     "    ax  = fig.add_subplot(nb_line, nb_column, 1 + a)\n",
