tests because graph don't start with good object

--- a/Tests/Tests_Maud.ipynb
+++ b/Tests/Tests_Maud.ipynb
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -76,71 +76,71 @@
      "output_type": "stream",
      "text": [
       "        time  framenumber  xposition  yposition currentPatch previousTrapeze  \\\n",
-      "0      1.904           10        439        235           NE               S   \n",
-      "1      5.030           88        332        201           NE               W   \n",
-      "2      5.189           92        326        200           NE               S   \n",
-      "3      6.590          127        300        244           NE               W   \n",
-      "4     12.672          279        318        187           NE               S   \n",
+      "0     15.915          360         79        230           NW               W   \n",
+      "1     16.953          386        202        336           SW               N   \n",
+      "2     17.833          408        191        425           SW               E   \n",
+      "3     18.794          432        100        399           SW               S   \n",
+      "4     19.596          452         97        336           SW               W   \n",
       "..       ...          ...        ...        ...          ...             ...   \n",
-      "674  711.526        17741        404        327           SE               E   \n",
-      "675  712.808        17773        412        203           NE               S   \n",
-      "676  713.646        17794        406        111           NE               E   \n",
-      "677  714.408        17813        305        105           NE               N   \n",
-      "678  715.527        17841        302        242           NE               W   \n",
+      "667  711.526        17741        404        327           SE               E   \n",
+      "668  712.808        17773        412        203           NE               S   \n",
+      "669  713.646        17794        406        111           NE               E   \n",
+      "670  714.408        17813        305        105           NE               N   \n",
+      "671  715.527        17841        302        242           NE               W   \n",
       "\n",
       "    currentTrapeze  turnDirection ongoingRewardedObject  \\\n",
-      "0                E           90.0                ['NE']   \n",
-      "1                S           90.0                ['NE']   \n",
-      "2                W          270.0                ['NE']   \n",
-      "3                S           90.0                ['NE']   \n",
-      "4                W          270.0                   NaN   \n",
+      "0                S           90.0                ['NW']   \n",
+      "1                E          270.0                ['SW']   \n",
+      "2                S          270.0                ['SW']   \n",
+      "3                W          270.0                ['SW']   \n",
+      "4                N          270.0                ['SW']   \n",
       "..             ...            ...                   ...   \n",
-      "674              N           90.0                ['SE']   \n",
-      "675              E           90.0                ['NE']   \n",
-      "676              N           90.0                ['NE']   \n",
-      "677              W           90.0                ['NE']   \n",
-      "678              S           90.0                ['NE']   \n",
+      "667              N           90.0                ['SE']   \n",
+      "668              E           90.0                ['NE']   \n",
+      "669              N           90.0                ['NE']   \n",
+      "670              W           90.0                ['NE']   \n",
+      "671              S           90.0                ['NE']   \n",
       "\n",
       "    ongoingRewardedDirection Rewarded typeOfTurn  nberOfConsecRewards  \\\n",
-      "0                     [90.0]        1       gogd                    1   \n",
-      "1                     [90.0]        1       gogd                    2   \n",
-      "2                     [90.0]    False       gobd                    2   \n",
-      "3                     [90.0]        1       gogd                    3   \n",
-      "4                    [270.0]    False       bogd                    3   \n",
+      "0                    [270.0]    False       gobd                    5   \n",
+      "1                    [270.0]        1       gogd                    6   \n",
+      "2                    [270.0]        1       gogd                    7   \n",
+      "3                    [270.0]        1       gogd                    8   \n",
+      "4                    [270.0]        0     gogdnr                    0   \n",
       "..                       ...      ...        ...                  ...   \n",
-      "674                   [90.0]        1       gogd                   20   \n",
-      "675                   [90.0]        1       gogd                   21   \n",
-      "676                   [90.0]        1       gogd                   22   \n",
-      "677                   [90.0]        1       gogd                   23   \n",
-      "678                   [90.0]        0     gogdnr                    0   \n",
+      "667                   [90.0]        1       gogd                   20   \n",
+      "668                   [90.0]        1       gogd                   21   \n",
+      "669                   [90.0]        1       gogd                   22   \n",
+      "670                   [90.0]        1       gogd                   23   \n",
+      "671                   [90.0]        0     gogdnr                    0   \n",
       "\n",
       "     maxNberOfConsecRewards  nbQT_sinceLastReward  nbRewardsWhileDepleting  \\\n",
-      "0                         0                     0                        1   \n",
-      "1                         0                     0                        2   \n",
+      "0                         0                     0                        2   \n",
+      "1                         0                     0                        1   \n",
       "2                         0                     0                        2   \n",
       "3                         0                     0                        3   \n",
-      "4                         0                     0                        0   \n",
+      "4                         0                     1                        3   \n",
       "..                      ...                   ...                      ...   \n",
-      "674                       0                     0                        3   \n",
-      "675                       0                     0                        1   \n",
-      "676                       0                     0                        2   \n",
-      "677                       0                     0                        3   \n",
-      "678                       0                     1                        3   \n",
+      "667                       0                     0                        3   \n",
+      "668                       0                     0                        1   \n",
+      "669                       0                     0                        2   \n",
+      "670                       0                     0                        3   \n",
+      "671                       0                     1                        3   \n",
       "\n",
       "     totalnberOfRewards  \n",
-      "0                     1  \n",
-      "1                     2  \n",
-      "2                     2  \n",
-      "3                     3  \n",
-      "4                     3  \n",
+      "0                     5  \n",
+      "1                     6  \n",
+      "2                     7  \n",
+      "3                     8  \n",
+      "4                     8  \n",
       "..                  ...  \n",
-      "674                 532  \n",
-      "675                 533  \n",
-      "676                 534  \n",
-      "677                 535  \n",
-      "678                 535  \n",
+      "667                 532  \n",
+      "668                 533  \n",
+      "669                 534  \n",
+      "670                 535  \n",
+      "671                 535  \n",
       "\n",
-      "[679 rows x 17 columns]\n"
+      "[672 rows x 17 columns]\n"
      ]
     }
    ],
@@ -148,34 +148,45 @@
     "# Tests for turns_df \n",
     "\n",
     "csv_turns_path = Folder_path + mouseName + '/' + session + '/' + session + '_turnsinfo.csv'\n",
+    "\n",
+    "# Lis le fichier csv obtenu à la fin de la manip\n",
     "turns_df = pd.read_csv(csv_turns_path)\n",
-    "#turns_df=turns_df.loc[turns_df[\"time\"]>15]\n",
+    "\n",
+    "# Sélectionne les valeurs pour lesquelles le temps est supérieur à 15 sec (problèmes de détecttion avant 15 sec)\n",
+    "turns_df=turns_df.loc[turns_df[\"time\"]>15]\n",
+    "\n",
+    "# Reset les index dans le dataframe pour démarrer à 0\n",
+    "turns_df=turns_df.reset_index(drop=True)\n",
+    "\n",
+    "# Montre à quoi ressemble df\n",
     "print(turns_df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "    Objet visité  temps d'entrée  temps de sortie  nb rewards\n",
-      "2             SW          16.953           20.319           1\n",
-      "3             SE          21.035           22.517           4\n",
-      "4             NE          24.078           26.559           0\n",
-      "5             NW          27.879           30.362           0\n",
-      "6             NE          31.283           33.445           0\n",
-      "..           ...             ...              ...         ...\n",
-      "174           SW         673.825          675.386          14\n",
-      "175           NW         675.666          675.666          15\n",
-      "176           SW         679.588          688.314          17\n",
-      "177           SE         704.001          711.526          20\n",
-      "178           NE         712.808          715.527           0\n",
+      "    Objet visité  temps d'entrée  temps de sortie\n",
+      "0             NW          15.915           15.915\n",
+      "1             SW          16.953           20.319\n",
+      "2             SE          21.035           22.517\n",
+      "3             NE          24.078           26.559\n",
+      "4             NW          27.879           30.362\n",
+      "..           ...             ...              ...\n",
+      "173           SW         673.825          675.386\n",
+      "174           NW         675.666          675.666\n",
+      "175           SW         679.588          688.314\n",
+      "176           SE         704.001          711.526\n",
+      "177           NE         712.808          715.527\n",
       "\n",
-      "[177 rows x 4 columns]\n"
+      "[178 rows x 3 columns]\n",
+      "['NW', 'SW', 'SE', 'NE', 'NW', 'NE', 'NW', 'SW', 'NE', 'SE', 'SW', 'SE', 'SW', 'NE', 'SE', 'SW', 'NW', 'SE', 'NE', 'SE', 'SW', 'SE', 'NW', 'SE', 'NE', 'NW', 'SE', 'NE', 'SE', 'SW', 'SE', 'NW', 'NE', 'SW', 'NW', 'SW', 'NW', 'SW', 'NW', 'SE', 'SW', 'NW', 'NE', 'SE', 'SW', 'NW', 'NE', 'SE', 'SW', 'NW', 'NE', 'SE', 'NE', 'NW', 'SE', 'NE', 'NW', 'SW', 'SE', 'SW', 'NW', 'SW', 'SE', 'SW', 'SE', 'NE', 'NW', 'NE', 'NW', 'SW', 'NE', 'NW', 'SW', 'SE', 'NE', 'NW', 'NE', 'SE', 'NE', 'SE', 'SW', 'SE', 'SW', 'NE', 'SE', 'NW', 'NE', 'SW', 'NE', 'NW', 'SW', 'SE', 'NE', 'SW', 'NW', 'SW', 'NW', 'NE', 'SE', 'SW', 'SE', 'SW', 'SE', 'NE', 'SE', 'NE', 'SW', 'NW', 'SW', 'SE', 'NE', 'NW', 'NE', 'SE', 'NE', 'SE', 'NE', 'NW', 'NE', 'SE', 'NW', 'SW', 'NE', 'SE', 'SW', 'NW', 'NE', 'NW', 'SW', 'SE', 'SW', 'NW', 'NE', 'SE', 'NE', 'SE', 'SW', 'NW', 'NE', 'NW', 'SW', 'NE', 'SE', 'SW', 'NW', 'NE', 'NW', 'NE', 'SW', 'SE', 'SW', 'NW', 'SW', 'SE', 'NE', 'SW', 'SE', 'NE', 'SE', 'SW', 'NE', 'SE', 'NE', 'NW', 'SW', 'SE', 'NE', 'SE', 'NE', 'SW', 'NW', 'NE', 'SE', 'SW', 'NW', 'SW', 'SE', 'NE']\n",
+      "[15.915, 16.953, 21.035, 24.078, 27.879, 31.283, 34.723, 38.125, 41.845, 45.129, 47.81, 51.532, 53.774, 56.455, 58.416, 60.177, 61.817, 65.86, 68.304, 72.264, 74.224, 78.025, 81.31, 85.112, 87.872, 90.395, 93.395, 96.717, 99.317, 101.238, 105.121, 108.923, 110.965, 114.046, 118.049, 121.69, 124.451, 128.053, 133.256, 136.658, 138.538, 140.461, 142.419, 144.38, 146.261, 148.185, 150.105, 151.908, 154.024, 155.468, 157.269, 165.594, 169.077, 171.716, 174.117, 176.56, 181.802, 187.925, 190.647, 193.408, 195.449, 199.491, 202.374, 204.975, 207.617, 209.697, 214.818, 218.182, 221.343, 225.145, 229.467, 231.388, 236.471, 239.353, 243.755, 247.157, 251.358, 253.841, 257.081, 259.883, 262.442, 265.968, 270.25, 274.21, 276.133, 278.775, 281.776, 285.498, 289.097, 292.819, 297.625, 300.626, 303.827, 307.268, 310.751, 313.433, 316.315, 325.719, 327.797, 330.361, 333.483, 336.365, 339.247, 341.728, 347.771, 351.37, 354.454, 357.294, 360.1, 385.271, 388.111, 391.394, 394.195, 396.836, 400.198, 404.241, 407.404, 410.525, 412.365, 414.404, 418.248, 420.089, 423.092, 426.013, 428.133, 429.977, 432.376, 445.463, 447.622, 450.706, 453.307, 461.633, 463.833, 467.877, 470.755, 473.437, 475.359, 483.364, 491.485, 498.331, 500.613, 510.418, 515.581, 517.701, 519.584, 521.584, 529.587, 532.469, 538.273, 544.035, 554.08, 572.249, 575.773, 583.216, 591.182, 601.426, 609.553, 609.751, 619.677, 625.639, 630.482, 633.481, 636.565, 639.087, 640.968, 643.81, 645.41, 653.775, 656.736, 661.578, 667.903, 669.783, 671.702, 673.825, 675.666, 679.588, 704.001, 712.808]\n"
      ]
     }
    ],
@@ -185,13 +196,9 @@
     "# turns_df = dataframe du tableur \"turnsinfos\" généré à la fin des sessions\n",
     "# df = dataframe qui contient, à chaque fois que la souris visite un objet, quel objet est visité + à quel moment elle a commencé son premier turn + le temps du dernier QT\n",
     "\n",
-    "csv_turns_path = Folder_path + mouseName + '/' + session + '/' + session + '_turnsinfo.csv'\n",
-    "turns_df = pd.read_csv(csv_turns_path)\n",
-    "#turns_df=turns_df.loc[turns_df[\"time\"]>15]\n",
-    "\n",
     "objets_visites = []\n",
     "temps_entree = []\n",
-    "nb_QT = []\n",
+    "#nb_QT = []\n",
     "temps_sortie = []\n",
     "current_patch = None\n",
     "\n",
@@ -208,30 +215,53 @@
     "        # Si ce n'est pas la première ligne, sauvegarder le temps de sortie précédent\n",
     "        if index != 0:\n",
     "            temps_sortie.append(turns_df.iloc[index - 1]['time'])\n",
-    "            nb_QT.append(turns_df.iloc[index - 1]['nberOfConsecRewards'])\n",
+    "            #nb_QT.append(turns_df.iloc[index - 1]['nberOfConsecRewards'])\n",
     "\n",
     "# Ajouter le temps de sortie pour la dernière ligne\n",
     "if not turns_df.empty:\n",
     "    temps_sortie.append(turns_df.iloc[-1]['time'])\n",
-    "    nb_QT.append(turns_df.iloc[-1]['nberOfConsecRewards'])\n",
+    "    #nb_QT.append(turns_df.iloc[-1]['nberOfConsecRewards'])\n",
     "\n",
     "# Création du DataFrame à partir des listes\n",
     "df = pd.DataFrame({\n",
     "    \"Objet visité\": objets_visites,\n",
     "    \"temps d'entrée\": temps_entree,\n",
-    "    \"temps de sortie\": temps_sortie,\n",
-    "    \"nb rewards\": nb_QT\n",
+    "    \"temps de sortie\": temps_sortie\n",
     "    })\n",
     "\n",
-    "df=df.loc[df[\"temps d'entrée\"]>15]\n",
-    "print(df)\n"
+    "#df=df.loc[df[\"temps d'entrée\"]>15]\n",
+    "#df=df.reset_index(drop=True)\n",
+    "print(df)\n",
+    "#print(objets_visites) # Test \n",
+    "#print(temps_entree) # Test"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 63,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          time  xposition  yposition\n",
+      "0       15.032       88.0      176.0\n",
+      "1       15.074       88.0      176.0\n",
+      "2       15.113       88.0      176.0\n",
+      "3       15.153       88.0      175.0\n",
+      "4       15.194       87.0      173.0\n",
+      "...        ...        ...        ...\n",
+      "17611  719.847      462.0      267.0\n",
+      "17612  719.890      462.0      267.0\n",
+      "17613  719.930      462.0      267.0\n",
+      "17614  719.970      462.0      267.0\n",
+      "17615  720.009      462.0      267.0\n",
+      "\n",
+      "[17616 rows x 3 columns]\n"
+     ]
+    }
+   ],
    "source": [
     "#trajectoire autour du premier objet visité et/ou des suivants \n",
     "\n",
@@ -242,7 +272,9 @@
     "traj_df=pd.read_csv(csv_centroid_path)\n",
     "traj_df=traj_df.dropna()\n",
     "traj_df=traj_df.loc[traj_df['time'] >15]\n",
+    "traj_df=traj_df.reset_index(drop=True)\n",
     "traj_df=traj_df[traj_df['xposition'].between(1,500) & traj_df['yposition'].between(1,500)]\n",
+    "print(traj_df)\n",
     "\n",
     "xpositions=traj_df['xposition'].to_numpy()\n",
     "ypositions=traj_df['yposition'].to_numpy()\n",
@@ -262,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -337,6 +369,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       time  xposition  yposition\n",
+      "795  46.850      295.0      107.0\n",
+      "796  46.889      297.0      113.0\n",
+      "797  46.930      298.0      116.0\n",
+      "798  46.969      301.0      119.0\n",
+      "799  47.009      303.0      121.0\n",
+      "..      ...        ...        ...\n",
+      "899  51.013      203.0      117.0\n",
+      "900  51.053      203.0      117.0\n",
+      "901  51.090      204.0      117.0\n",
+      "902  51.132      204.0      117.0\n",
+      "903  51.170      204.0      118.0\n",
+      "\n",
+      "[109 rows x 3 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Test print traj_df_objet\n",
+    "print(traj_df_objet)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
    "outputs": [
@@ -362,7 +425,7 @@
     }
    ],
    "source": [
-    "#Test print traj_df\n",
+    "# Test print traj_df\n",
     "print(traj_df)"
    ]
   },
