first tests for the second analysis (QT)

--- a/Tests/Tests_Maud.ipynb
+++ b/Tests/Tests_Maud.ipynb
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -485,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -532,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -549,11 +549,8 @@
    "source": [
     "# Cellule avec la partie de l'ancien code d'Alice qui m'intéresse (plot des trajectoires des QT spécifiquement)\n",
     "\n",
-    "# Il me manque à reprendre de l'ancien code : \n",
-    "# - list_quarter_turn (et autres listes mais pas d'intérêt ? A voir selon comment c'est codé ailleurs)\n",
-    "\n",
-    "nb_column = 1 #one for each type of trajectory # Changé \n",
-    "nb_line = 1 #one for each graph to be plotted # Changé\n",
+    "nb_column = 1 #one for each type of trajectory \n",
+    "nb_line = 1 #one for each graph to be plotted\n",
     "\n",
     "max_height_speed = []\n",
     "max_height_angular = []\n",
@@ -561,7 +558,7 @@
     "\n",
     "fig = plt.figure(figsize = (5 * nb_column, 5 * nb_line))\n",
     "for a in range(nb_column):\n",
-    "    current_movements = [list_quarter_turn][a] # Changé\n",
+    "    current_movements = [list_quarter_turn][a] # Only QT for this plot\n",
     "\n",
     "#Plots the trajectory of the current mod\n",
     "    ax  = fig.add_subplot(nb_line, nb_column, 1 + a)\n",
@@ -585,11 +582,11 @@
     "        ax.scatter(xgauss[indices_end], ygauss[indices_end], linewidths= 0.1, color = \"red\")\n",
     "    else : pass\n",
     "        \n",
-    "    timeSpentIn = round(sum([df.loc[df.index[epoch[1]], 'time'] - df.loc[df.index[epoch[0]], 'time'] for epoch in current_movements]), 2)\n",
+    "    timeSpentIn = round(sum([turns_df.loc[df.index[epoch[1]], 'time'] - turns_df.loc[df.index[epoch[0]], 'time'] for epoch in current_movements]), 2)\n",
     "\n",
     "#Sets the parameters of the graph\n",
     "    ax.set_ylim(0, 500); ax.set_xlim(0, 500)\n",
-    "    ax.set_title([\"Quarter turns : \", \"Between objects : \", \"Towards objects : \", \"Other movements : \", \"Stops : \"][a] + str(len(current_movements)) + f\"\\n total time : {timeSpentIn}s\")\n",
+    "    ax.set_title([\"Quarter turns : \"][a] + str(len(current_movements)) + f\"\\n total time : {timeSpentIn}s\")\n",
     "    plt.xlim(12, 500); plt.ylim(12, 500)\n",
     "    ax.get_xaxis().set_visible(False)\n",
     "    ax.get_yaxis().set_visible(False)\n",
