change in filter_trajectory_around_time function explanation

--- a/Tests/Tests_Maud.ipynb
+++ b/Tests/Tests_Maud.ipynb
@@ -298,7 +298,7 @@
    "source": [
     "def filter_trajectory_around_time(traj_df, time_start, time_end, time_margin=1): \n",
     "    '''Cette fonction sert à ajouter un temps défini à mon temps d'entrée et de sortie \n",
-    "    pour obtenir la trajectoire avant et après un QT\n",
+    "    pour obtenir la trajectoire pendant x secondes avant et après un QT\n",
     "    Return un dataframe filtré'''\n",
     "    traj_df_filtered = traj_df[(traj_df['time'] >= (time_start - time_margin)) & (traj_df['time'] <= (time_end + time_margin))]\n",
     "    return traj_df_filtered"
