add dropna() to turns_df

--- a/Tests/Tests_Maud.ipynb
+++ b/Tests/Tests_Maud.ipynb
@@ -152,7 +152,8 @@
     "# Lis le fichier csv obtenu à la fin de la manip\n",
     "turns_df = pd.read_csv(csv_turns_path)\n",
     "\n",
-    "# Sélectionne les valeurs pour lesquelles le temps est supérieur à 15 sec (problèmes de détecttion avant 15 sec)\n",
+    "# Sélectionne les valeurs pour lesquelles le temps est supérieur à 15 sec (problèmes de détecttion avant 15 sec) et enlève les valeurs NA\n",
+    "turns_df = turns_df.dropna() # Supprime les lignes avec un ou plus de valeurs NA \n",
     "turns_df=turns_df.loc[turns_df[\"time\"]>15]\n",
     "\n",
     "# Reset les index dans le dataframe pour démarrer à 0\n",
