--- a/Tests/Tests_Maud.ipynb
+++ b/Tests/Tests_Maud.ipynb
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -324,7 +324,7 @@
     "ypositions=traj_df['yposition'].to_numpy()\n",
     "        \n",
     "distances=np.array([((((xpositions[i]-xpositions[i-1])**2)+((ypositions[i]-ypositions[i-1])**2))**0.5) for i in range(1,len(ypositions))])\n",
-    "resolution=resolution = 512,512\n",
+    "resolution = 512,512\n",
     "\n",
     "traj_df['yposition'] = resolution[1] - traj_df['yposition']\n",
     "\n",
@@ -827,6 +827,20 @@
     "ax.get_yaxis().set_visible(False)\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Same thing but with Thomas analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
